change ktlint of pinterest